--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
     <title>Desain Media Interaktif Ihda Anisa Ulfa</title>
     <link href='./style.css' rel='stylesheet'>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
  <link rel="stylesheet" href="fontawesome/css/all.css">
  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.js></script>
